# aws-robomaker-jetbot-ros

./: README.md  roboMakerSettings.json
assets/credentials/: aws-configuration.js  credentials
assets/scripts/: Dockerfile  compile_arm64.sh  compile_armhf.sh  install_deps.sh  install_iot.sh  install_ros.sh  jetbot.yaml  reset_cred.sh  reset_image.sh  set_credentials.sh  set_docker.sh  set_iot.sh  startros.sh
assets/scripts/arm32/: Dockerfile  bionic-sources-arm32.yaml  install_deps.sh  qemu-arm-static  reset_image.sh  set_iot.sh
assets/scripts/arm32/custom-rosdep-rules/: raspicam-node.yaml
assets/scripts/arm64/: Dockerfile  bionic-sources-arm64.yaml  install_deps.sh  qemu-aarch64-static  reset_image.sh  set_iot.sh
assets/scripts/resources/: credentials
assets/scripts/resources/custom-rosdep-rules/: raspicam-node.yaml
assets/teleop/: aws-configuration.js  awscreds.js  bundle.js  robogui.html
img/: dcmotor.py
robot_ws/src/jetbot_app/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robot_ws/src/jetbot_app/config/: certificate.pem.crt  private.pem.key  public.pem.key
robot_ws/src/jetbot_app/deploymentScripts/: pre_launch_file.sh
robot_ws/src/jetbot_app/jetbot_app/: adafruit_move.py  circle.py  endpoint.py  move.py  quiic_move.py  teleop.py
robot_ws/src/jetbot_app/launch/: circle.launch  circle_launch.py  dino.launch  dino.old.launch  teleop.launch  teleop_launch.py
robot_ws/src/jetbot_app/nodes/: camera  circle  detect  dino_finder  move  move.py  teleop  teleop.py
robot_ws/src/set_environment/: setup.py
simulation_ws/: .rosinstall
simulation_ws/src/jetbot_description/: CMakeLists.txt  package.xml
simulation_ws/src/jetbot_description/config/: jetbot_diff_drive_control.yaml
simulation_ws/src/jetbot_description/env-hooks/: jetbot_description.dsv.in
simulation_ws/src/jetbot_description/launch/: display_launch.py  gazebo.launch  gazebo_launch.py  jetbot_description_launch.py  spawn_launch.py  view_gazebo.launch
simulation_ws/src/jetbot_description/models/urdf/: jetbot.gazebo  jetbot.urdf  jetbot.xml  jetbot_bai.xml  jetbot_xacro_urdf.xml
simulation_ws/src/jetbot_description/urdf/: jetbot.urdf
simulation_ws/src/jetbot_sim_app/: package.xml  setup.cfg  setup.py
simulation_ws/src/jetbot_sim_app/config/: certificate.pem.crt  private.pem.key  public.pem.key
simulation_ws/src/jetbot_sim_app/jetbot_sim_app/: circleros.py  endpoint.py  rotate.py  teleop.py
simulation_ws/src/jetbot_sim_app/launch/: circle.launch.py  circle_launch.py  teleop.launch  teleop_launch.py  view_teleop.launch
simulation_ws/src/jetbot_sim_app/nodes/: teleop.py
